tests/errors/match_missing_enum.vir
// MatchCoverage: enum subject with one enumerant omitted.

enum type Color {
    Red   = 0w2
    Green = 1
    Blue  = 2
}

mod MissingEnumVariant {
    wire c : Color
    c := #Red

    wire out : Bit
    unused out
    // CHECK: not covered: #Blue
    out := match c {
        case #Red   => true
        case #Green => false
    }
}

// CHECK: Check failed
